--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,13 @@ version: 2
 
 enable-beta-ecosystems: true
 
+registries:
+  herrbischoff:
+    type: git
+    url: https://git.herrbischoff.com
+    username: x-access-token
+    password: ${{ secrets.TOKEN }}
+
 updates:
 
   # Bundler
@@ -73,6 +80,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    registries: "*"
     ignore:
       # ignore patch updates for all dependencies
       - dependency-name: "*"
